Fix cursori da chiudere nella richiesta di supporto, aggiunto refresh vista TOTAL