@@ -11,6 +11,7 @@ import java.util.List;
 
 import lispa.schedulers.bean.target.DmalmProject;
 import lispa.schedulers.bean.target.fatti.DmalmReleaseDiProgetto;
+import lispa.schedulers.constant.DmAlmConstants;
 import lispa.schedulers.exception.DAOException;
 import lispa.schedulers.manager.ConnectionManager;
 import lispa.schedulers.manager.ErrorManager;
@@ -42,8 +43,6 @@ public class ReleaseDiProgettoDAO {
 
 		ConnectionManager cm = null;
 		Connection connection = null;
-		PreparedStatement ps = null;
-		ResultSet rs = null;
 
 		DmalmReleaseDiProgetto bean = null;
 		List<DmalmReleaseDiProgetto> releases = new ArrayList<DmalmReleaseDiProgetto>(
@@ -52,104 +51,100 @@ public class ReleaseDiProgettoDAO {
 		try {
 			cm = ConnectionManager.getInstance();
 			connection = cm.getConnectionOracle();
-
+			connection.setAutoCommit(false);
 			String sql = QueryManager.getInstance().getQuery(
 					SQL_RELEASE_DI_PROGETTO);
-			ps = connection.prepareStatement(sql);
+			
+			try(PreparedStatement ps = connection.prepareStatement(sql);){
 
-			ps.setFetchSize(200);
-
-			ps.setTimestamp(1, dataEsecuzione);
-			ps.setTimestamp(2, dataEsecuzione);
-
-			rs = ps.executeQuery();
-
-			logger.debug("Query Eseguita!");
-
-			while (rs.next()) {
-				// Elabora il risultato
-				bean = new DmalmReleaseDiProgetto();
-
-				bean.setCdReleasediprog(rs.getString("CD_REL_DI_PROG"));
-				bean.setCodice(rs.getString("CODICE"));
-				bean.setDataDisponibilitaEff(rs
-						.getTimestamp("DATA_DISPONIBILITA_EFFETTIVA"));
-				bean.setDataPassaggioInEsercizio(rs
-						.getTimestamp("DATA_PASSAGGIO_IN_ESERC"));
-				bean.setDescrizioneReleasediprog(rs
-						.getString("DESCRIZIONE_REL_DI_PROG"));
-				bean.setDmalmProjectFk02(rs.getInt("DMALM_PROJECT_FK_02"));
-				bean.setDmalmStatoWorkitemFk03(rs
-						.getInt("DMALM_STATO_WORKITEM_FK_03"));
-				bean.setDmalmUserFk06(rs.getInt("DMALM_USER_FK_06"));
-				bean.setDmalmReleasediprogPk(rs.getInt("DMALM_REL_DI_PROG_PK"));
-				bean.setDsAutoreReleasediprog(rs
-						.getString("NOME_AUTORE_REL_DI_PROG"));
-				bean.setDtCaricamentoReleasediprog(dataEsecuzione);
-				bean.setDtCreazioneReleasediprog(rs
-						.getTimestamp("DATA_INSERIMENTO_RECORD"));
-				bean.setDtModificaReleasediprog(rs
-						.getTimestamp("DATA_MODIFICA_REL_DI_PROG"));
-				bean.setDtRisoluzioneReleasediprog(rs
-						.getTimestamp("DATA_RISOLUZIONE_REL_DI_PROG"));
-				bean.setDtScadenzaReleasediprog(rs
-						.getTimestamp("DATA_SCADENZA_REL_DI_PROG"));
-				bean.setFornitura(rs.getString("CLASSE_DI_FORNITURA"));
-				bean.setFr(rs.getBoolean("FIRST_RELEASE"));
-				bean.setIdAutoreReleasediprog(rs
-						.getString("ID_AUTORE_REL_DI_PROG"));
-				bean.setIdRepository(rs.getString("ID_REPOSITORY"));
-				bean.setMotivoRisoluzioneRelProg(rs
-						.getString("MOTIVO_RISOL_REL_DI_PROG"));
-				bean.setNumeroLinea(StringUtils.getLinea(rs
-						.getString("CODICE_INTERVENTO")));
-				bean.setNumeroTestata(StringUtils.getTestata(rs
-						.getString("CODICE_INTERVENTO")));
-				bean.setTitoloReleasediprog(rs.getString("TITOLO_REL_DI_PROG"));
-				bean.setVersione(rs.getString("VERSIONE"));
-				bean.setUri(rs.getString("URI_WI"));
-				bean.setStgPk(rs.getString("STG_REL_DI_PROG_PK"));
-
-				String registry = rs.getString("REGISTRY");
-				Timestamp inizio = null;
-				Timestamp fine = null;
-				Integer qf = null;
-				if (registry != null) {
-					try {
-						String[] regToSplit = registry.split(",");
-
-						if (regToSplit.length > 0) {
-							inizio = DateUtils.stringToTimestamp(regToSplit[0], "yyyy-MM-dd HH:mm");
-							if (StringUtils.hasText(regToSplit[1])) {
-								fine = DateUtils
-										.stringToTimestamp(regToSplit[1], "yyyy-MM-dd HH:mm");
+				ps.setFetchSize(DmAlmConstants.FETCH_SIZE);
+	
+				ps.setTimestamp(1, dataEsecuzione);
+				ps.setTimestamp(2, dataEsecuzione);
+	
+				try(ResultSet rs = ps.executeQuery();){
+	
+					logger.debug("Query Eseguita!");
+		
+					while (rs.next()) {
+						// Elabora il risultato
+						bean = new DmalmReleaseDiProgetto();
+		
+						bean.setCdReleasediprog(rs.getString("CD_REL_DI_PROG"));
+						bean.setCodice(rs.getString("CODICE"));
+						bean.setDataDisponibilitaEff(rs
+								.getTimestamp("DATA_DISPONIBILITA_EFFETTIVA"));
+						bean.setDataPassaggioInEsercizio(rs
+								.getTimestamp("DATA_PASSAGGIO_IN_ESERC"));
+						bean.setDescrizioneReleasediprog(rs
+								.getString("DESCRIZIONE_REL_DI_PROG"));
+						bean.setDmalmProjectFk02(rs.getInt("DMALM_PROJECT_FK_02"));
+						bean.setDmalmStatoWorkitemFk03(rs
+								.getInt("DMALM_STATO_WORKITEM_FK_03"));
+						bean.setDmalmUserFk06(rs.getInt("DMALM_USER_FK_06"));
+						bean.setDmalmReleasediprogPk(rs.getInt("DMALM_REL_DI_PROG_PK"));
+						bean.setDsAutoreReleasediprog(rs
+								.getString("NOME_AUTORE_REL_DI_PROG"));
+						bean.setDtCaricamentoReleasediprog(dataEsecuzione);
+						bean.setDtCreazioneReleasediprog(rs
+								.getTimestamp("DATA_INSERIMENTO_RECORD"));
+						bean.setDtModificaReleasediprog(rs
+								.getTimestamp("DATA_MODIFICA_REL_DI_PROG"));
+						bean.setDtRisoluzioneReleasediprog(rs
+								.getTimestamp("DATA_RISOLUZIONE_REL_DI_PROG"));
+						bean.setDtScadenzaReleasediprog(rs
+								.getTimestamp("DATA_SCADENZA_REL_DI_PROG"));
+						bean.setFornitura(rs.getString("CLASSE_DI_FORNITURA"));
+						bean.setFr(rs.getBoolean("FIRST_RELEASE"));
+						bean.setIdAutoreReleasediprog(rs
+								.getString("ID_AUTORE_REL_DI_PROG"));
+						bean.setIdRepository(rs.getString("ID_REPOSITORY"));
+						bean.setMotivoRisoluzioneRelProg(rs
+								.getString("MOTIVO_RISOL_REL_DI_PROG"));
+						bean.setNumeroLinea(StringUtils.getLinea(rs
+								.getString("CODICE_INTERVENTO")));
+						bean.setNumeroTestata(StringUtils.getTestata(rs
+								.getString("CODICE_INTERVENTO")));
+						bean.setTitoloReleasediprog(rs.getString("TITOLO_REL_DI_PROG"));
+						bean.setVersione(rs.getString("VERSIONE"));
+						bean.setUri(rs.getString("URI_WI"));
+						bean.setStgPk(rs.getString("STG_REL_DI_PROG_PK"));
+		
+						String registry = rs.getString("REGISTRY");
+						Timestamp inizio = null;
+						Timestamp fine = null;
+						Integer qf = null;
+						if (registry != null) {
+							try {
+								String[] regToSplit = registry.split(",");
+		
+								if (regToSplit.length > 0) {
+									inizio = DateUtils.stringToTimestamp(regToSplit[0], "yyyy-MM-dd HH:mm");
+									if (StringUtils.hasText(regToSplit[1])) {
+										fine = DateUtils
+												.stringToTimestamp(regToSplit[1], "yyyy-MM-dd HH:mm");
+									}
+									qf = Integer.parseInt(regToSplit[2]);
+								}
+							} catch (Exception e) {
+								logger.error(
+										"Registry non valorizzato correttamente - CdRelease: "
+												+ bean.getCdReleasediprog()
+												+ ", registry: " + registry, e);
 							}
-							qf = Integer.parseInt(regToSplit[2]);
 						}
-					} catch (Exception e) {
-						logger.error(
-								"Registry non valorizzato correttamente - CdRelease: "
-										+ bean.getCdReleasediprog()
-										+ ", registry: " + registry, e);
+						bean.setDtInizioQF(inizio);
+						bean.setDtFineQF(fine);
+						bean.setNumQuickFix(qf);
+		
+						//DM_ALM-320
+						bean.setSeverity(rs.getString("SEVERITY"));
+						bean.setPriority(rs.getString("PRIORITY"));
+						bean.setTypeRelease(rs.getString("TYPE_RELEASE"));
+						
+						releases.add(bean);
 					}
 				}
-				bean.setDtInizioQF(inizio);
-				bean.setDtFineQF(fine);
-				bean.setNumQuickFix(qf);
-
-				//DM_ALM-320
-				bean.setSeverity(rs.getString("SEVERITY"));
-				bean.setPriority(rs.getString("PRIORITY"));
-				bean.setTypeRelease(rs.getString("TYPE_RELEASE"));
-				
-				releases.add(bean);
-			}
-
-			if (rs != null) {
-				rs.close();
-			}
-			if (ps != null) {
-				ps.close();
 			}
 		} catch (DAOException e) {
 			ErrorManager.getInstance().exceptionOccurred(true, e);
@@ -186,7 +181,7 @@ public class ReleaseDiProgettoDAO {
 							.getCdReleasediprog()))
 					.where(rls.idRepository.equalsIgnoreCase(release
 							.getIdRepository()))
-					.where(rls.rankStatoReleasediprog.eq(new Double(1)))
+					.where(rls.rankStatoReleasediprog.eq(Double.valueOf(1)))
 					.list(rls.all());
 		} catch (Exception e) {
 			ErrorManager.getInstance().exceptionOccurred(true, e);
@@ -258,7 +253,7 @@ public class ReleaseDiProgettoDAO {
 							release.getIdRepository(),
 							release.getMotivoRisoluzioneRelProg(),
 							release.getNumeroLinea(),
-							release.getNumeroTestata(), new Double(1),
+							release.getNumeroTestata(), Double.valueOf(1),
 							release.getTitoloReleasediprog(),
 							release.getVersione(), release.getStgPk(),
 							release.getDmalmAreaTematicaFk05(),
@@ -318,13 +313,10 @@ public class ReleaseDiProgettoDAO {
 
 		ConnectionManager cm = null;
 		Connection connection = null;
-
 		try {
 			cm = ConnectionManager.getInstance();
 			connection = cm.getConnectionOracle();
-
 			connection.setAutoCommit(false);
-
 			new SQLInsertClause(connection, dialect, rls)
 					.columns(rls.cdReleasediprog, rls.codice,
 							rls.dataDisponibilitaEff,
@@ -392,7 +384,6 @@ public class ReleaseDiProgettoDAO {
 							release.getTypeRelease()).execute();
 
 			connection.commit();
-
 		} catch (Exception e) {
 			ErrorManager.getInstance().exceptionOccurred(true, e);
 
@@ -400,7 +391,6 @@ public class ReleaseDiProgettoDAO {
 			if (cm != null)
 				cm.closeConnection(connection);
 		}
-
 	}
 
 	public static void updateReleaseDiProgetto(DmalmReleaseDiProgetto release)
@@ -421,7 +411,7 @@ public class ReleaseDiProgettoDAO {
 							.getCdReleasediprog()))
 					.where(rls.idRepository.equalsIgnoreCase(release
 							.getIdRepository()))
-					.where(rls.rankStatoReleasediprog.eq(new Double(1)))
+					.where(rls.rankStatoReleasediprog.eq(Double.valueOf(1)))
 					.set(rls.cdReleasediprog, release.getCdReleasediprog())
 					.set(rls.codice, release.getCodice())
 					.set(rls.dataDisponibilitaEff,
